# lidar_ws

./: README.md  dependencies.rosinstall  requirements.txt  setup.sh
src/floor_fit/: CMakeLists.txt  LICENSE  package.xml
src/floor_fit/launch/: demo_floor_fit.launch  floor_fit.launch
src/floor_fit/rviz/: rviz.rviz
src/floor_fit/scripts/: visualizor
src/lab_setup/: CMakeLists.txt  README.md  package.xml
src/lab_setup/launch/: just_sensor.launch  show_cloud.launch
src/lab_setup/rviz/: just_cloud.rviz  pseudo_depth_image.rviz
